Test photo real path